--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -10,10 +10,12 @@
         \subfile{sections/1/2}    
     \end{section}
     \begin{section}{Simplicial Homology}
-        \subfile{sections/1/3}    
+        \subfile{sections/1/3}  
+        \label{sec:1:3}  
     \end{section}
     \begin{section}{Simplicial Cohomology}
         \subfile{sections/1/4} 
+        \label{sec:1:4}
     \end{section}
     % \begin{section}{Laplacian Operators}
     %     \label{sec:1:5}
