--- a/tesi/sections/2/2.tex
+++ b/tesi/sections/2/2.tex
@@ -15,6 +15,9 @@
         \[ d_1 = (\del_1)^* \quad \text{and} \quad d_1^\dagger = (\del_1^\dagger)^* .\]
     \end{defn}
 
+    The notions of boundary and coboundary allow us to define homology and cohomology on graphs according to the definitions of sections \ref{sec:1:3} and \ref{sec:1:4}.
+    Notice that on graphs we have that $\del_i \neq 0$ only for $i = 0,1$, therefore the homology groups $H_i$ and cohomology groups $H^i$ are trivial for $i > 0$.
+
     Here we identify $C_p = C^p$ with the above choice of
     canonical basis.
 
