--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -109,6 +109,7 @@
 \newcommand{\im}{\mathrm{im}\,}
 % \newcommand{\ker}{\mathrm{ker}}
 \DeclareMathOperator{\tr}{tr}
+\DeclareMathOperator{\dg}{deg}
 
 \begin{document}
     \begin{titlepage}
