--- a/tesi/sections/2/2.tex
+++ b/tesi/sections/2/2.tex
@@ -12,7 +12,8 @@
         \[ \del^\dagger_1\ket{i} := \sum_{j : \ket{i,j} \in C_1} \ket{i,j},\]
         also extended by linearity.\\
         We define the \ii{divergence} $d_1 : C^0 \to C^1$ and the \ii{gradient} respectively as
-        \[ d_1 = (\del_1)^* \quad \text{and} \quad d_1^\dagger = (\del_1^\dagger)^* .\]
+        \[ d_1 = (\del_1^\dagger)^* \quad \text{and} \quad d_1^\dagger = (\del_1)^* .\]
+        \label{def:2:2:2}
     \end{defn}
 
     The notions of boundary and coboundary allow us to define homology and cohomology on graphs according to the definitions of sections \ref{sec:1:3} and \ref{sec:1:4}.
@@ -21,8 +22,8 @@
     Here we identify $C_p = C^p$ with the above choice of
     canonical basis.
 
-    Notice that $d_1\bra{i} = \bra{i}\del_1$,
-    where the cochain $\cc{i}\del_1$ is the dual of the chain $\del_1^\dagger\ch{i}$.
+    Notice that $d_1^\dagger \bra{i} = \bra{i}\del_1$,
+    where the cochain $\cc{i}\del_1$ is the adjoint of the chain $\del_1^\dagger\ch{i}$.
 
     % {\color{red} Disegno che mostra il cobordo di un nodo}
 
