--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -159,7 +159,7 @@
             \label{app:A}
             \subfile{sections/appendixA/main}
         \end{chapter}
-        \begin{chapter}{Dirac Notation}
+        \begin{chapter}{Dirac's Notation}
             \label{app:B}
             \subfile{sections/appendixB/main}
         \end{chapter}
