--- a/tesi/sections/appendixB/main.tex
+++ b/tesi/sections/appendixB/main.tex
@@ -1,9 +1,13 @@
 \documentclass[../1.tex]{subfiles}
 \begin{document}
    
-    In the Dirac notation we use the kets $\ch{\psi}$ as vectors (group elements) and the bras $\cc{\psi}$ as their dual.
-    The bra-ket product $\braket{\psi}{\varphi} = \cc{\psi}(\varphi)$ is the bra evaluated on the ket,
-    this is an inner product of $\ch{\psi}$ and $\ch{\varphi}$.
+    {\color{blue} The so called bra-ket notation was indroduced by Paul Dirac as an effective language in quantum mechanics.
+    Mathematically, if $V$ is any vector space, we call \ii{ket} $\ch{\psi}$ an element of $V$ and \ii{bra} $\cc{\phi}$ an element of $V^*$.
+    We will now see some operations on bras and kets.
+    A bra $\cc{\phi} : V \to \K$ acts on a ket in the so called \ii{bra-ket product} $\braket{\phi}{\psi} \in \K$.
+    Let $A : V \to V$ be a linear operator, then it acts on kets in the so called \ii{operator-ket product} $A\ch{\psi} \in V$.
+    Similarly it acts on bras in the so called \ii{bra-operator product} $\cc{\phi}A \in V^*$.
+    Since a bra maps a ket to a scalar and $A\ch{\psi}$ is also a ket, we can write the \ii{bra-operator-ket product} as $\cc{\phi}A\ch{psi} \in \K$.}
     In this notation the spectral theorem for selfadjoint operators with a discrete spectrum reads as
     \[ A = \sum_i \ch{a_i}a_i\cc{a_i}, \]
     where $A \ch{a_i} = a_i \ch{a_i}, \; \braket{a_i}{a_j} = \delta_ij$ and $\sum_i \ch{a_i} \cc{a_i} = 1$.
