--- a/tesi/sections/2/6.tex
+++ b/tesi/sections/2/6.tex
@@ -28,7 +28,7 @@
     Let us see what we can say about the solution of this equation on graphs.
 
     \begin{prop}
-        {\color{blue}Let $\mc{G}$ be a simple undirected graph and let $\ch{psi}$ a time dependent $0$-chain, which is differentiable w.r.t. time.
+        {\color{blue}Let $\mc{G}$ be a simple undirected graph and let $\ch{\psi}$ a time dependent $0$-chain, which is differentiable w.r.t. time.
         If this $\ch{psi}$ satisfies the heat equation $\frac{d}{dt}\ch{\psi} = -\Delta_0 \ch{\psi}$ with initial condition $\ch{\psi}|_{t = 0} = \ch{\psi_0}$, then
         \[ \ch{\psi} = \sum_i\ch{e_i}e^{-\lambda_i t}\braket{e_i}{\psi_0}, \]
         where $\ch{e_i}$ and $\lambda_i$ are the orthonornmal eigenchains and the eigenvalues of the $0$-laplacian respectively,
