--- a/tesi/sections/2/5.tex
+++ b/tesi/sections/2/5.tex
@@ -42,11 +42,11 @@ this matrix and the differential operator is due to the chain complex structure.
 \begin{figure}[H]
     \centering
     \includegraphics[width=17cm, height=4cm]{sections/2/eiglap}
-    \caption{A graphical representation of the first laplacian eigenchains.}
+    \caption{A graphical representation of the first laplacian eigenchains on the Minnesota Road Graph.}
     \label{fig:2:5}
 \end{figure}
 
-{\color{red} Io vorrei dire che grafo è questo ma ho riletto l'articolo e Bronstein non lo dice.}
+
 
 In figure \ref{fig:2:5} we can see some of the $0$-laplacian eigenfunctions. We notice that the eigenfunction corresponding to the eigenvalue $0$ is uniform.
 To understand this let's look back at the definition of $0$-laplacian on graphs. {\color{blue} The laplacian can be represented as a matrix with respect to the canonical basis
