--- a/tesi/sections/appendixA/main.tex
+++ b/tesi/sections/appendixA/main.tex
@@ -71,5 +71,6 @@
     \end{thm}
 
     We already know how the homology functor acts on the objects, the way it acts on morphisms will be excluded from this appendix and can be found in 
-    \cite{rotman} at $4.3$.}
+    \cite{rotman} at $4.3$. As we saw, we know that functors preserve the equivalence between the objects of the categories, therefore if two topological spaces are isomorphic
+    their homology groups will be isomorphic.}
 \end{document}
