--- a/tesi/sections/3.tex
+++ b/tesi/sections/3.tex
@@ -28,7 +28,8 @@
     %     \subfile{sections/3/4}   
     % \end{section}
     \begin{section}{Spectral Convolution}
-        \subfile{sections/3/5}   
+        \subfile{sections/3/5}  
+        \label{sec:3:3} 
     \end{section}
     % \begin{section}{Message Passing Neural Networks}
     %     \subfile{sections/3/4}  
