--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -89,7 +89,6 @@
     title={Deep Learning},
     author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
     publisher={MIT Press},
-    note={\url{http://www.deeplearningbook.org}},
     year={2016}
 }
 
@@ -100,4 +99,12 @@
       eprint={2104.13478},
       archivePrefix={arXiv},
       primaryClass={cs.LG}
+}
+
+@book{circulant,
+   title =     {Circulant Matrices},
+   author =    {Philip J. Davis},
+   publisher = {John Wiley and Sons Inc},
+   year =      {1979},
+   series =    {Pure and Applied Mathematics},
 }
