--- a/tesi/sections/3/3.tex
+++ b/tesi/sections/3/3.tex
@@ -62,7 +62,8 @@
         is an action of $G$ on $\mc{S}$.
     \end{prop}
     \begin{proof}
-        We can see that $g.(h.\phi)(x) = g.\phi(h^{-1}.x) = \phi((g^{-1} \circ h^{-1}).x) = ((g \circ h).\phi)(x). \qedhere$
+        We can easily see that $g.(h.\phi)(x) = g.\phi(h^{-1}.x) = \phi((g^{-1} \circ h^{-1}).x) = ((g \circ h).\phi)(x)$ and that 
+        $(1.\phi)(x) = \phi(1.x) = \phi(x)$. \qedhere
     \end{proof}
 
     An important class of group actions is that of \ii{linear} group actions, also called \ii{group representations}.
